init sql scripts, connection string to SQL database, model/entities by dbcontext scaffold

--- a/Goal.Api/appsettings.json
+++ b/Goal.Api/appsettings.json
@@ -1,5 +1,8 @@
 {
-  "Logging": {
+    "ConnectionStrings": {
+        "SqlServerConnection": "Server=myserver;Database=EshopDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
