--- a/Goal.Api/Goal.Api.csproj
+++ b/Goal.Api/Goal.Api.csproj
@@ -8,11 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
     <PackageReference Include="Swashbuckle.AspNetCore" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Goal.Application\Goal.Application.csproj" />
+    <ProjectReference Include="..\Goal.Infrastructure\Goal.Infrastructure.csproj" />
     <ProjectReference Include="..\Goal.Shared\Goal.Shared.csproj" />
   </ItemGroup>
 
