controllers & API, mapping, application & repository layers

--- a/.gitignore
+++ b/.gitignore
@@ -377,6 +377,7 @@ tilt_config.json
 
 # appsettings.Development.json obsahuje hesla uzivatlele na Rabbit, proto ignorovat
 appsettings.Development.json
+DatabaseContextScaffoldCommand.sh
 
 #Private env file for HTTP
 **/*.private.env.json
