--- a/Goal.Application/Goal.Application.csproj
+++ b/Goal.Application/Goal.Application.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Goal.Domain\Goal.Domain.csproj" />
     <ProjectReference Include="..\Goal.Shared\Goal.Shared.csproj" />
+    <ProjectReference Include="..\Goal.Infrastructure\Goal.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -11,11 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DTOs\" />
     <Folder Include="Exceptions\" />
     <Folder Include="Features\" />
-    <Folder Include="Mappings\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
   <PropertyGroup>
