--- a/Goal.Api/appsettings.json
+++ b/Goal.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "SqlServerConnection": "Server=myserver;Database=EshopDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "SqlServerConnection": "Server=localhost;Database=GoalDatabase;User Id=GoalAppUser;Password=StrongPass_123!;Trusted_Connection=false;TrustServerCertificate=true;Integrated Security=false;MultipleActiveResultSets=true"
     },
     "Logging": {
     "LogLevel": {
