--- a/Goal.Test/Goal.Test.csproj
+++ b/Goal.Test/Goal.Test.csproj
@@ -7,15 +7,21 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <RootNamespace>Goal.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" />
+    <PackageReference Include="JetBrains.Annotations" />
+    <PackageReference Include="FakeItEasy" />
     <PackageReference Include="FluentAssertions" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Moq" />
     <PackageReference Include="xunit" />
-    <PackageReference Include="xunit.runner.visualstudio" />
+      <PackageReference Include="xunit.runner.visualstudio" Version="3.0.1">
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+          <PrivateAssets>all</PrivateAssets>
+      </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
@@ -25,13 +31,11 @@
   <ItemGroup>
     <ProjectReference Include="..\Goal.Api\Goal.Api.csproj" />
     <ProjectReference Include="..\Goal.Application\Goal.Application.csproj" />
-    <ProjectReference Include="..\Goal.Domain\Goal.Domain.csproj" />
     <ProjectReference Include="..\Goal.Infrastructure\Goal.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="IntegrationTests\" />
-    <Folder Include="UnitTests\" />
   </ItemGroup>
 
 </Project>
