using CancellationToken in repository + tests, fix ExceptionMiddleware

--- a/Goal.Api/appsettings.json
+++ b/Goal.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "SqlServerConnection": "Server=localhost;Database=GoalDatabase;User Id=GoalAppUser;Password=StrongPass_123!;Trusted_Connection=false;TrustServerCertificate=true;Integrated Security=false;MultipleActiveResultSets=true"
+        "SqlServerConnection": "Server=localhost:1433;Database=GoalDatabase;User Id=GoalAppUser;Password=StrongPass_123!;Trusted_Connection=false;TrustServerCertificate=true;Integrated Security=false;MultipleActiveResultSets=true"
     },
     "Logging": {
     "LogLevel": {
