--- a/Goal.Application/Goal.Application.csproj
+++ b/Goal.Application/Goal.Application.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" />
+    <PackageReference Include="MediatR" />
     <PackageReference Include="Riok.Mapperly" />
   </ItemGroup>
 
